--- a/app/src/main/res/layout/fragment_caretaker_sign_up.xml
+++ b/app/src/main/res/layout/fragment_caretaker_sign_up.xml
@@ -30,6 +30,14 @@
                 android:textStyle="bold"
                 android:layout_marginTop="8dp"/>
 
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/imageCaretakerSignup"
+                android:src="@drawable/undraw_profile_pic_re_upir"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="32dp"/>
+
             <!--Apartment Create-->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,8 +47,8 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:src="@drawable/ic_baseline_house_24"
                     app:tint="?attr/textBlack100"/>
 
@@ -51,7 +59,8 @@
                     android:textStyle="bold"
                     android:fontFamily="@font/poppins_regular"
                     android:textColor="?attr/textBlack700"
-                    android:textSize="16sp"/>
+                    android:includeFontPadding="false"
+                    android:textSize="18sp"/>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
