--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -54,4 +54,10 @@
         <item name="android:color">?attr/colorPrimary</item>
     </style>
 
+    <!--Default appearance for buttons-->
+    <style name="PrimaryButton" parent="Theme.AppCompat">
+        <item name="colorButtonNormal">?attr/colorOnSecondary</item>
+        <item name="colorControlHighlight">@color/accent_blue_bright</item>
+    </style>
+
 </resources>
