--- a/app/src/main/res/values-night-v23/themes.xml
+++ b/app/src/main/res/values-night-v23/themes.xml
@@ -58,6 +58,7 @@
 
     <!--Default appearance for buttons-->
     <style name="PrimaryButton" parent="Theme.AppCompat">
+        <item name="backgroundTint">@color/accent_blue_bright</item>
         <item name="colorButtonNormal">?attr/colorOnSecondary</item>
         <item name="colorControlHighlight">@color/accent_blue_bright</item>
     </style>
