--- a/app/src/main/res/layout/profile_details_bottomsheet.xml
+++ b/app/src/main/res/layout/profile_details_bottomsheet.xml
@@ -37,7 +37,7 @@
             android:textStyle="bold"
             android:fontFamily="@font/poppins_regular"
             android:includeFontPadding="false"
-            android:textColor="@color/text_white_500"/>
+            android:textColor="?attr/textBlack300"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="@font/poppins_regular"
             android:includeFontPadding="false"
-            android:textColor="@color/text_white_900"/>
+            android:textColor="?attr/textBlack700"/>
 
     </LinearLayout>
 
@@ -64,7 +64,6 @@
         android:textSize="14sp"
         android:textColor="@color/text_white_900"
         android:fontFamily="@font/poppins_regular"
-        android:layout_marginTop="20dp"
-        android:theme="@style/PrimaryButton"/>
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
