--- a/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
+++ b/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
@@ -16,26 +16,65 @@
             android:orientation="vertical"
             android:padding="16dp">
 
+            <View
+                android:layout_width="16dp"
+                android:layout_height="2dp"
+                android:background="?attr/textBlack100"
+                android:layout_gravity="center_horizontal"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New House"
+                android:text="Add a House"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="?attr/textBlack700"
                 android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
+                android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"/>
 
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center_horizontal"
-                android:id="@+id/add_house_image"
-                app:riv_corner_radius="16dp"
+            <HorizontalScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:src="@drawable/ic_baseline_add_photo_alternate_24"
-                app:tint="?attr/textBlack300"/>
+                android:layout_gravity="center_horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <!--RecyclerView to populate our images-->
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/imagesRecyclerView"/>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:id="@+id/add_house_image"
+                        app:cardBackgroundColor="@color/accent_blue_bright_trans"
+                        app:cardElevation="0dp"
+                        android:layout_marginStart="16dp"
+                        app:cardCornerRadius="8dp">
+
+                        <com.makeramen.roundedimageview.RoundedImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            app:riv_corner_radius="16dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_baseline_add_24"
+                            app:tint="?attr/textBlack300"/>
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+            </HorizontalScrollView>
 
             <!--House Number-->
             <com.google.android.material.textfield.TextInputLayout
@@ -317,56 +356,35 @@
                 android:includeFontPadding="false"
                 android:layout_marginTop="32dp"/>
 
-            <LinearLayout
+            <EditText
                 android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/house_description"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:inputType="textMultiLine"
+                android:gravity="top"
+                android:hint="Tell me more..."
+                android:padding="16dp"
+                android:textColor="?attr/textBlack700"
+                android:textStyle="normal"
+                android:textSize="14sp"
+                android:fontFamily="@font/poppins_regular"
+                android:includeFontPadding="false"
+                android:background="@drawable/rounded_edit_text"/>
+
+
+            <Button
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:id="@+id/house_description"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginStart="16dp"
-                    android:inputType="textMultiLine"
-                    android:gravity="top"
-                    android:hint="Tell me more..."
-                    android:padding="16dp"
-                    android:textColor="?attr/textBlack700"
-                    android:textStyle="normal"
-                    android:textSize="14sp"
-                    android:fontFamily="@font/poppins_regular"
-                    android:includeFontPadding="false"
-                    android:background="@drawable/rounded_edit_text"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rounded_corners_active"
-                    android:padding="8dp"
-                    android:orientation="horizontal"
-                    android:layout_gravity="end"
-                    android:gravity="center"
-                    android:layout_marginTop="8dp">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_library_add"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Templates"
-                        android:textStyle="bold"
-                        android:textSize="14sp"
-                        android:textColor="@color/text_white_900"
-                        android:fontFamily="@font/poppins_regular"
-                        android:includeFontPadding="false"
-                        android:layout_marginStart="8dp"/>
-
-                </LinearLayout>
-            </LinearLayout>
+                android:backgroundTint="@color/accent_blue_bright"
+                android:id="@+id/addBtn"
+                android:layout_gravity="end"
+                android:text="Add"
+                android:textStyle="bold"
+                android:textColor="@color/text_white_900"
+                android:layout_marginTop="32dp"
+                android:theme="@style/PrimaryButton"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
