--- a/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
+++ b/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
@@ -34,47 +34,40 @@
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"/>
 
-            <HorizontalScrollView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_gravity="center_horizontal">
+                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
 
-                <LinearLayout
+                <!--RecyclerView to populate our images-->
+                <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+                    android:id="@+id/imagesRecyclerView"/>
 
-                    <!--RecyclerView to populate our images-->
-                    <androidx.recyclerview.widget.RecyclerView
+                <androidx.cardview.widget.CardView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/add_house_image"
+                    app:cardBackgroundColor="@color/accent_blue_bright_trans"
+                    app:cardElevation="0dp"
+                    android:layout_marginStart="16dp"
+                    app:cardCornerRadius="8dp">
+
+                    <com.makeramen.roundedimageview.RoundedImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/imagesRecyclerView"/>
+                        android:layout_gravity="center"
+                        app:riv_corner_radius="16dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_baseline_add_24"
+                        app:tint="?attr/textBlack300"/>
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:id="@+id/add_house_image"
-                        app:cardBackgroundColor="@color/accent_blue_bright_trans"
-                        app:cardElevation="0dp"
-                        android:layout_marginStart="16dp"
-                        app:cardCornerRadius="8dp">
+                </androidx.cardview.widget.CardView>
 
-                        <com.makeramen.roundedimageview.RoundedImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            app:riv_corner_radius="16dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ic_baseline_add_24"
-                            app:tint="?attr/textBlack300"/>
-
-                    </androidx.cardview.widget.CardView>
-
-                </LinearLayout>
-
-            </HorizontalScrollView>
+            </LinearLayout>
 
             <!--House Number-->
             <com.google.android.material.textfield.TextInputLayout
