--- a/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
+++ b/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
@@ -35,37 +35,59 @@
                 android:layout_gravity="center_horizontal"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="32dp"
                 android:orientation="horizontal">
 
                 <!--RecyclerView to populate our images-->
                 <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:visibility="gone"
+                    android:layout_marginEnd="16dp"
                     android:id="@+id/imagesRecyclerView"/>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:id="@+id/add_house_image"
-                    app:cardBackgroundColor="@color/accent_blue_bright_trans"
-                    app:cardElevation="0dp"
-                    android:layout_marginStart="16dp"
-                    app:cardCornerRadius="8dp">
+                <!--Add Image Button-->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <com.makeramen.roundedimageview.RoundedImageView
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:id="@+id/add_house_image"
+                        app:cardBackgroundColor="@color/accent_blue_bright_trans"
+                        app:cardElevation="0dp"
+                        app:cardCornerRadius="8dp">
+
+                        <com.makeramen.roundedimageview.RoundedImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            app:riv_corner_radius="16dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_baseline_add_24"
+                            app:tint="?attr/textBlack300"/>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        app:riv_corner_radius="16dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_add_24"
-                        app:tint="?attr/textBlack300"/>
+                        android:text="Add"
+                        android:textSize="12sp"
+                        android:textColor="?attr/textBlack300"
+                        android:fontFamily="@font/poppins_regular"
+                        android:includeFontPadding="false"
+                        android:layout_marginTop="8dp"
+                        android:layout_gravity="center_horizontal"/>
 
-                </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -197,12 +219,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:text="Single"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
                             android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
-                            android:textColor="?attr/textBlack700"/>
+                            android:text="Single"
+                            android:textColor="?attr/textBlack700"
+                            android:textSize="14sp" />
                     </RelativeLayout>
 
                     <!--Bedsitter-->
@@ -218,12 +239,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:text="Bedsitter"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
                             android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
-                            android:textColor="?attr/textBlack700"/>
+                            android:text="Bedsitter"
+                            android:textColor="?attr/textBlack700"
+                            android:textSize="14sp" />
                     </RelativeLayout>
 
                     <!--One Bedroom-->
@@ -239,12 +259,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:text="One Bedroom"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
                             android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
-                            android:textColor="?attr/textBlack700"/>
+                            android:text="One Bedroom"
+                            android:textColor="?attr/textBlack700"
+                            android:textSize="14sp" />
                     </RelativeLayout>
 
                     <!--Two Bedroom-->
@@ -260,12 +279,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:text="Two Bedroom"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
                             android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
-                            android:textColor="?attr/textBlack700"/>
+                            android:text="Two Bedroom"
+                            android:textColor="?attr/textBlack700"
+                            android:textSize="14sp" />
 
                     </RelativeLayout>
 
@@ -282,12 +300,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:text="Three Bedroom"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
                             android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
-                            android:textColor="?attr/textBlack700"/>
+                            android:text="Three Bedroom"
+                            android:textColor="?attr/textBlack700"
+                            android:textSize="14sp" />
 
                     </RelativeLayout>
 
@@ -304,12 +321,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:text="Mansion"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
                             android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
-                            android:textColor="?attr/textBlack700"/>
+                            android:text="Mansion"
+                            android:textColor="?attr/textBlack700"
+                            android:textSize="14sp" />
                     </RelativeLayout>
 
                     <!--Other-->
@@ -325,12 +341,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:text="Other"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
                             android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
-                            android:textColor="?attr/textBlack700"/>
+                            android:text="Other"
+                            android:textColor="?attr/textBlack700"
+                            android:textSize="14sp" />
                     </RelativeLayout>
 
                 </LinearLayout>
