--- a/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
+++ b/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
@@ -34,62 +34,16 @@
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_gravity="center_horizontal"
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:id="@+id/add_house_image"
+                android:layout_gravity="center"
+                app:riv_corner_radius="16dp"
                 android:layout_marginTop="32dp"
-                android:orientation="horizontal">
-
-                <!--RecyclerView to populate our images-->
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:visibility="gone"
-                    android:layout_marginEnd="16dp"
-                    android:id="@+id/imagesRecyclerView"/>
-
-                <!--Add Image Button-->
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:id="@+id/add_house_image"
-                        app:cardBackgroundColor="@color/accent_blue_bright_trans"
-                        app:cardElevation="0dp"
-                        app:cardCornerRadius="8dp">
-
-                        <com.makeramen.roundedimageview.RoundedImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            app:riv_corner_radius="16dp"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ic_baseline_add_24"
-                            app:tint="?attr/textBlack300"/>
-
-                    </androidx.cardview.widget.CardView>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Add"
-                        android:textSize="12sp"
-                        android:textColor="?attr/textBlack300"
-                        android:fontFamily="@font/poppins_regular"
-                        android:includeFontPadding="false"
-                        android:layout_marginTop="8dp"
-                        android:layout_gravity="center_horizontal"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
+                android:scaleType="centerCrop"
+                android:src="@drawable/image_regular"
+                app:tint="?attr/textBlack300"/>
 
             <!--House Number-->
             <com.google.android.material.textfield.TextInputLayout
@@ -113,7 +67,7 @@
                     android:textSize="14sp"
                     android:textColor="?attr/textBlack700"
                     android:background="@drawable/rounded_edit_text_primary"
-                    android:id="@+id/emailSignIn"
+                    android:id="@+id/houseNumber"
                     android:padding="0dp"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -386,7 +340,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/accent_blue_bright"
-                android:id="@+id/addBtn"
+                android:id="@+id/houseAddBtn"
                 android:layout_gravity="end"
                 android:text="Add"
                 android:textStyle="bold"
