--- a/app/src/main/res/layout/activity_caretaker.xml
+++ b/app/src/main/res/layout/activity_caretaker.xml
@@ -72,15 +72,15 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="16dp"
                 android:id="@+id/caretaker_recycler_view"
-                android:visibility="invisible"
                 android:scrollbars="vertical"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:orientation="vertical">
 
                 <ImageView
