--- a/app/src/main/res/layout/activity_caretaker.xml
+++ b/app/src/main/res/layout/activity_caretaker.xml
@@ -60,7 +60,6 @@
             android:textStyle="bold"
             android:textColor="?attr/textBlack700"
             android:fontFamily="@font/poppins_regular"
-            android:layout_marginTop="16dp"
             android:includeFontPadding="false"
             android:layout_centerHorizontal="true"/>
 
@@ -73,8 +72,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="16dp"
+                android:layout_marginTop="16dp"
                 android:id="@+id/caretaker_recycler_view"
-                android:scrollbars="vertical"/>
+                android:scrollbars="vertical"
+                tools:listitem="@layout/caretaker_house_item"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
