--- a/app/src/main/res/layout/caretaker_house_item.xml
+++ b/app/src/main/res/layout/caretaker_house_item.xml
@@ -13,36 +13,190 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
+        android:padding="8dp"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/house_card_image"
-            android:src="@drawable/house1"
-            android:scaleType="centerCrop"
-            app:riv_corner_radius="16dp"/>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <LinearLayout
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:id="@+id/house_card_image"
+                android:src="@drawable/house1"
+                android:scaleType="centerCrop"
+                app:riv_corner_radius="8dp"/>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_edit_text_primary"
+                android:padding="4dp"
+                android:layout_margin="4dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/house_card_image_count"
+                    android:text="+2"
+                    android:textStyle="bold"
+                    android:textSize="14sp"
+                    android:textColor="?attr/colorPrimary"
+                    android:includeFontPadding="false"/>
+
+            </RelativeLayout>
+
+        </FrameLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:gravity="start"
+            android:paddingStart="16dp">
 
+            <!--House category-->
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/house_card_category_holder"
+                android:background="@drawable/rounded_edit_text_primary"
+                android:padding="4dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/house_card_category"
+                    android:text="one bedroom"
+                    android:textStyle="bold"
+                    android:textSize="12sp"
+                    android:textColor="@color/accent_blue_bright"
+                    android:includeFontPadding="false" />
+
+            </RelativeLayout>
+
+            <!--House Number-->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/house_card_number"
                 android:text="H16"
                 android:textStyle="bold"
-                android:textSize="18sp"
-                android:fontFamily="@font/poppins_regular"
-                android:textColor="?attr/textBlack500"
+                android:textSize="20sp"
+                android:layout_centerVertical="true"
+                android:textColor="?attr/textBlack700"
+                android:includeFontPadding="false"
                 android:layout_marginTop="8dp"/>
 
-        </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:gravity="center_vertical"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="0dp">
+
+                <!--House Price-->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/house_card_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/house_card_category_holder"
+                        android:includeFontPadding="false"
+                        android:text="Ksh. 15,000"
+                        android:textColor="?attr/textBlack500"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/house_card_price_per_month_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/house_card_category_holder"
+                        android:includeFontPadding="false"
+                        android:text="/mo"
+                        android:textColor="?attr/textBlack100"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <!--House status-->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="8dp"
+                    android:orientation="horizontal">
+
+                    <FrameLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <!--Occupied-->
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/house_card_occupied_holder"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <View
+                                android:layout_width="5dp"
+                                android:layout_height="5dp"
+                                android:background="@drawable/circle_green"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="occupied"
+                                android:textStyle="bold"
+                                android:textSize="12sp"
+                                android:textColor="@color/success_green"
+                                android:layout_marginStart="8dp"/>
+
+                        </LinearLayout>
+
+                        <!--Vacant-->
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"
+                            android:id="@+id/house_card_vacant_holder"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <View
+                                android:layout_width="5dp"
+                                android:layout_height="5dp"
+                                android:background="@drawable/circle_red"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="vacant"
+                                android:textStyle="bold"
+                                android:textSize="12sp"
+                                android:textColor="@color/error_red"
+                                android:layout_marginStart="8dp"/>
+
+                        </LinearLayout>
+
+                    </FrameLayout>
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
